--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,6 +24,9 @@
     crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
     crossorigin="anonymous">
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBrdQ7WyPmfHVWrHsubIfm6Wgc8RiBgsRY"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBrdQ7WyPmfHVWrHsubIfm6Wgc8RiBgsRY&libraries=places&callback=initAutocomplete"
+async defer></script>
   <title>React App</title>
 </head>
 
@@ -46,6 +49,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 <script src="https://unpkg.com/ionicons@4.4.2/dist/ionicons.js"></script>
+
 </body>
 
 </html>
