--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,9 +24,9 @@
     crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
     crossorigin="anonymous">
-  
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBrdQ7WyPmfHVWrHsubIfm6Wgc8RiBgsRY&libraries=places&callback=initAutocomplete"
-      async defer></script>
+
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBrdQ7WyPmfHVWrHsubIfm6Wgc8RiBgsRY&libraries=places&callback=initAutocomplete"
+    async defer></script>
   <title>React App</title>
 </head>
 
@@ -34,7 +34,7 @@
   <noscript>
     You need to enable JavaScript to run this app.
   </noscript>
-  <div id="root" class="h-100"></div>
+  <div id="root"></div>
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
