--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,7 +10,7 @@
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+  <link rel="shortcut icon" href="%PUBLIC_URL%/icon.png">
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -27,7 +27,7 @@
 
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBrdQ7WyPmfHVWrHsubIfm6Wgc8RiBgsRY&libraries=places&callback=initAutocomplete"
     async defer></script>
-  <title>React App</title>
+  <title>Handy Helper</title>
 </head>
 
 <body>
